<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.myenglish</groupId>
    <artifactId>smart-km-report-gen</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>smart-km-report-gen</name>
    <description>知识管理综合平台</description>
    <packaging>pom</packaging>
    <!-- 合并双分支所有模块 -->
    <modules>
        <module>common</module>
        <module>qa-chat-service</module>
        <module>gateway</module>
        <module>auth</module>
        <module>km-common</module>
        <module>km-backend</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <lombok.version>1.18.38</lombok.version>
        <mybatis-plus.version>3.5.7</mybatis-plus.version>
        <spring-cloud.version>2023.0.5</spring-cloud.version>
        <!-- feat-a 补充属性 -->
        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mybatis.version>2.2.2</mybatis.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- develop 云依赖统一管理 -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <!-- develop 公共模块 -->
            <dependency>
                <groupId>com.myenglish</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- feat-a km平台模块版本管控 -->
            <dependency>
                <groupId>com.km</groupId>
                <artifactId>km-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.km</groupId>
                <artifactId>km-backend</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
    </dependencies>

    <build>
        <!-- 合并feat-a插件管理 + develop打包插件 -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.codehaus.plexus</groupId>
                            <artifactId>plexus-compiler-javac</artifactId>
                            <version>2.16.2</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>